# gpio-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gpio-cpp/: gpio.hpp
src/: gpio-nop.cpp  gpio.cpp
